# flynn

./: .gitignore  Cargo.toml  Makefile  README.md  flynn  flynn_debug
src/: arguments.rs  finding.rs  main.rs  scanner.rs
src/checks/: attributes.rs  config.rs  encoding.rs  hooks.rs  metadata.rs  mod.rs  objects.rs  refs.rs  structure.rs  submodules.rs  test_fixture.rs  worktrees.rs
src/output/: json.rs  mod.rs  sarif.rs  text.rs
test/: setup_fixture.sh
test/fixtures/: .gitignore
