[package]
name = "flynn"
version = "0.1.0"
edition = "2024"
description = "Scan .git directories for indicators of weaponization"
license = "AGPL-3.0"
repository = "https://github.com/trapdoorsec/flynn"
keywords = ["git", "security", "scanner", "malware", "ci"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.6.0", features = ["derive"] }
comfy-table = "=7.2.2"
gix = "=0.81.0"
owo-colors = "=4.3.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
walkdir = "=2.5.0"

[dev-dependencies]
tempfile = "3"
